assets/css/main.scss
/* ... */
html .masthead #site-title {
	font-weight: 400;
}

.page {
    float: none; /* remove sidebar */
    margin: 0 auto;
}

.layout--splash.index-page .wrapper {
    background-image: url("./../images/humboldt_county_map.png");
    background-position: top 0 left 10%; /* TODO test on larger screens */
    background-repeat: no-repeat;
    min-height: 322px;
    text-align: center;
}

.layout--splash.index-page h1#page-title {
    font-size: 3.5em;
	font-weight: 700;
}

.index-page li {
    list-style-type: circle;
}

.layout--splash.index-page h1#page-title,
.layout--splash.about-page h1#page-title,
.layout--splash.contribute-page h1#page-title {
    text-shadow: none;
    color: #333;
    line-height: 1.2;
	margin: 15px 0;
    font-size: 2em;
	font-weight: normal;
	text-align: center;
	font-size: 2em;
}

.layout--splash.index-page .page__hero--overlay,
.layout--splash.about-page .page__hero--overlay,
.layout--splash.contribute-page .page__hero--overlay {
    border-bottom: 10px solid #666;
    margin-bottom: 0;
}

.layout--splash.about-page .page__title b,
.layout--splash.contribute-page .page__title b {
    color: $dark-green-color; 
}

.layout--splash.header-page h2 {
    color: $deep-green-color;
}

.layout--splash.header-page #main p,
.layout--splash.header-page #main li {
    font-size: 1.2rem;
    line-height: 2rem;
}

.layout--splash.header-page .card {
    display: -webkit-box;
    display: -webkit-flex;
    display: -moz-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin-top: 2em;
}

.layout--splash.about-page .card .image {
    text-align: center;
    margin-top: 15px;
}

.layout--splash.about-page .card .image,
.layout--splash.about-page .card .info {
    width: 50%;
}

.layout--splash.about-page .card img {
    background: linear-gradient(-225deg, $indigo-color 0%, $deep-green-color 29%, $orange-color 67%, $indigo-color 100%);
    background-repeat: no-repeat;
}

.layout--splash.about-page .card.home img {
    height: 194px;
    width: 200px;
}

.layout--splash.about-page .card.computer img {
    height: 131px;
    width: 200px;
}

.layout--splash.about-page .card {
    margin-top: 2em;
}

.layout--splash.about-page .card .info {
    width: 50%;
}

.page__hero--overlay .page__lead {
    color: #333;
    display: inline;
    font-size: 1.03125em; /* TODO use h5? */
    font-weight: 700;
    text-align: center;
    text-shadow: none;
    width: 100%; /* width and display center it vertically without letting button next to it */
}

html h6 {
	font-weight: 500;
	text-transform: uppercase; 
}

html body {
	color: #444;
}

html body .site-title {
	font-weight: 500;
}

html .masthead {
	background-color:#FFF;
    box-shadow: 0 2px 10px 0 rgba(0,0,0,0.1);
}

html .masthead .site-title-wrapper {
	min-width: 250px;
}

html .masthead .visible-links {
	overflow: visible;
}

.intro {
    text-align: center;
}

.intro h1 {
    font-size: 56px;
}

.intro h5 {
    margin: 30px 0;
}

a.btn--large,
input[type="submit"] {
    background-color: #168743;
    background-color: #04AA6D;
    border-radius: 5px; 
    color: white;
    font-size: 16px;
    font-weight: bold;
    display: inline-block;
    padding: 16px 80px;
    text-decoration: none;
}

input.createList {
    float: right;
}


.animate {
 background-image: linear-gradient(
    -225deg,
    $indigo-color 0%,
    $deep-green-color 29%,
    $orange-color 67%,
    #292961 100%
  );
  background-size: auto auto;
  background-clip: border-box;
  background-size: 200% auto;
  color: #fff;
  background-clip: text;
  text-fill-color: transparent;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  animation: textclip 2s linear infinite;
}

@keyframes textclip {
  to {
    background-position: 200% center;
  }
}


#flip {
  height:70px;
  overflow:hidden;
}

#flip > div > div {
  padding:4px 12px;
  height:70px;
  margin-bottom:70px;
  display:inline-block;
}

#flip div:first-child {
  animation: show 7s linear infinite;
}

#flip div div {
  color: $orange-color;
}
#flip div:first-child div {
  color: $indigo-color;
}
#flip div:last-child div {
  color: $deep-green-color;
}

@keyframes show {
  0% {margin-top:-420px;}
  5% {margin-top:-280px;}
  33% {margin-top:-280px;}
  38% {margin-top:-140px;}
  66% {margin-top:-140px;}
  71% {margin-top:0px;}
  99.99% {margin-top:0px;}
  100% {margin-top:-420px;}
}

hr {
    background: $indigo-color;
    height: 10px;
    margin: 0;
}

h5 {
    color: #000;
}

ul.topics {
    display: -webkit-box;
    display: -webkit-flex;
    display: -moz-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    padding-top: 40px;
}

li.topic {
    margin-right: 24px;
    min-width: 290px;
    padding-bottom: 48px;
    width: calc(50% - 24px);
}

figure.left {
    float: left;
    margin-bottom: 0;
    margin-right: 15px;
}

figure.right {
    float: right;
    margin-bottom: 0;
    margin-left: 15px;
}

table.plant_table {
    font-size: 1em;
}

html table  thead {
    background-color: #FFF;
    border-radius-top-right: 8px;
    border-radius-top-left: 8px;
    border: 1px solid #dadce0;
    font-size: 1em;
}

input[type="search"] {
    background-image: url("./../images/icons/search-icon.png");
    background-repeat: no-repeat;
    background-position: 10px 8px !important;
    border: 1px solid #dadce0;
    border-radius: 20px;
    box-shadow: none;
    padding: 10px 10px 10px 50px;
}

input[type="search"]::placeholder {
    color: #777;
}

select {
    border: 1px solid #dadce0;
    border-radius: 20px;
    box-shadow: none;
    min-width: 110px;
    /* 
    -webkit-appearance: none;
    -moz-appearance: none; */}
table.dataTable thead .sorting {
    padding-right: 30px !important;
}

html table .scientific_name,
html table div.height { 
	color: #888;
	font-size: 0.9em;
    font-weight: normal;
}
/* ... */

